Fix iOS chat input text glitches: solid bg for light/dark and smoothing tweaks; improve input rendering on mobile

--- a/app/global.css
+++ b/app/global.css
@@ -31,6 +31,8 @@
 
 html {
   min-width: 360px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .prose .anchor {
@@ -136,6 +138,8 @@ input[type='email'] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+  -webkit-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
 
 table {
